# DCAP

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml  output.txt
.claude/: settings.local.json
examples/: mcp_example.rs  negotiation_demo.rs
src/: agent.rs  config.rs  database.rs  discovery.rs  error.rs  lib.rs  mcp.rs  model.rs  settlement.rs  sgx_quote.rs  trust.rs
tests/: integration_test.rs
